[gd_scene load_steps=12 format=3 uid="uid://kkkc248sbeom"]

[ext_resource type="Texture2D" uid="uid://b344548pufh6l" path="res://assets/cat.png" id="1_eebhr"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_p6eid"]
[ext_resource type="Texture2D" uid="uid://dspgxv6md2y65" path="res://assets/screenshots/mainmenubg.png" id="2_bsin2"]
[ext_resource type="FontFile" uid="uid://bohxxm2djjade" path="res://assets/fonts/HelpMe.ttf" id="3_66uuw"]
[ext_resource type="AudioStream" uid="uid://dart2018anu0y" path="res://assets/sounds/Evil 02.ogg" id="3_imm3c"]
[ext_resource type="AudioStream" uid="uid://b3vodefssb056" path="res://assets/sounds/MenuSelectionClick.wav" id="4_de5pc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o8q58"]
texture = ExtResource("2_bsin2")
modulate_color = Color(0.493545, 0.493546, 0.493546, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k2yxd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8id5"]
bg_color = Color(0.122252, 0.122252, 0.122252, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbvnr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xa51"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(3, 3)

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6eid")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_o8q58")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -227.0
offset_right = 136.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 9
theme_override_constants/shadow_outline_size = 11
theme_override_fonts/font = ExtResource("3_66uuw")
theme_override_font_sizes/font_size = 46
text = "SALMON THE CAT"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -7.0
offset_right = 136.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Cat" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(128, -83)
scale = Vector2(1.12917, 1.0875)
texture = ExtResource("1_eebhr")

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_66uuw")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_k2yxd")
theme_override_styles/hover = SubResource("StyleBoxFlat_o8id5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qbvnr")
theme_override_styles/normal = SubResource("StyleBoxFlat_3xa51")
text = "Jugar"
icon_alignment = 1

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_66uuw")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_k2yxd")
theme_override_styles/hover = SubResource("StyleBoxFlat_o8id5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qbvnr")
theme_override_styles/normal = SubResource("StyleBoxFlat_3xa51")
text = "Cr√©ditos"
icon_alignment = 1

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_66uuw")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_k2yxd")
theme_override_styles/hover = SubResource("StyleBoxFlat_o8id5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qbvnr")
theme_override_styles/normal = SubResource("StyleBoxFlat_3xa51")
text = "Salir"
icon_alignment = 1

[node name="MainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_imm3c")
volume_db = -12.325
autoplay = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_de5pc")
volume_db = -12.325

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
